# korea-investment-stock

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  api_monitoring_realtime.html  api_monitoring_report_api_calls.html  api_monitoring_report_cache.html  api_monitoring_report_rate_limiter.html  api_usage_24h.html  auth.go  client.go  client_test.go  config.go  config_test.go  error_rate_trend.html  error_stats.json  errors.go  errors_test.go  from_env.go  from_env_test.go  from_yaml.go  from_yaml_test.go  go.mod  go.sum  options.go  options_test.go  pyproject.toml  realtime_dashboard.html  realtime_dashboard_updated.html  system_health.html  system_health_updated.html  test_dynamic_batch.py  tools.go
.cursor/rules/: code-style.md  testing.md
.github/workflows/: publish-pypi.yml  release.yml  unit-tests.yml
bonds/: client.go  doc.go  quote.go  quote_test.go  testhelper_test.go
bonds/testdata/: avg_unit_success.json  bond_asking_price_success.json  bond_ccnl_success.json  bond_daily_itemchartprice_success.json  bond_daily_price_success.json  bond_price_success.json  issue_info_success.json  (+1 more)
docs/: README.md  phase3_4_completion_report.md  phase6_1_unit_tests_completion.md  phase6_completion_summary.md  phase7_1_documentation_completion.md  prd-27.md  rate_limiter_analysis.md  rate_limiter_defense_mechanisms.md  todo-27.md
domestic/: chart.go  chart_test.go  client.go  credit.go  credit_test.go  doc.go  etf.go  etf_test.go  extended.go  extended_test.go  financial.go  financial_test.go  industry.go  industry_test.go  info.go  info_test.go  interest.go  interest_test.go  investor.go  investor_test.go  ipo.go  ipo_test.go  ksd.go  ksd_test.go  market.go  market_op.go  market_op_test.go  market_test.go  opinion.go  opinion_test.go  price.go  price_test.go  program_trade.go  program_trade_test.go  quote.go  quote_test.go  ranking.go  ranking_test.go  symbols.go  symbols_test.go  (+3 more)
examples/: README.md  basic_example.py  cached_basic_example.py  cancel_order.py  cancel_order_partial.py  check_buy_order.py  fetch_balance.py  fetch_balance_mock.py  fetch_balance_mock_buy.py  fetch_ohlcv.py  fetch_ohlcv2.py  fetch_price.py  fetch_symbols.py  fetch_symbols_kosdaq.py  fetch_symbols_kospi.py  fetch_today_1minute_ohlcv.py  ipo_schedule_example.py  limit_buy_order.py  limit_sell_order.py  market_buy_order.py  market_sell_order.py  modify_order.py  modify_order_partial.py  rate_limiting_example.py  stats_management_example.py  stats_visualization_plotly.py  stress_test.py  us_stock_price_example.py  visualization_integrated_example.py  ws.py
futures/: board.go  board_test.go  chart.go  chart_test.go  client.go  conclusion.go  conclusion_test.go  doc.go  quote.go  quote_test.go  signed_parsing_test.go  testhelper_test.go
kis/: __init__.py
kistypes/: float.go  float_test.go
korea_investment_stock/: __init__.py  constants.py  enhanced_retry_decorator.py  korea_investment_stock.py  koreainvestmentstock.py  test_batch_processing.py  test_enhanced_backoff.py  test_enhanced_integration.py  test_env_auto_detection.py  test_error_handling.py  test_error_recovery.py  test_integration.py  test_integration_us_stocks.py  test_koreainvestmentstock.py  test_load.py  test_rate_limit_error_detection.py  test_rate_limit_simulation.py  test_rate_limiter.py  test_stats_save.py  test_threadpool_improvement.py  token_storage.py
mojito/: koreainvestment.py
overseas/: chart.go  chart_test.go  client.go  doc.go  news.go  news_test.go  price.go  price_test.go  ranking.go  ranking_test.go  rights.go  rights_test.go  search.go  search_test.go  signed_parsing_test.go  symbols.go  symbols_test.go  testhelper_test.go
overseasfutures/: chart.go  chart_test.go  client.go  doc.go  market_time.go  market_time_test.go  options.go  options_test.go  quote.go  quote_test.go  signed_parsing_test.go  testhelper_test.go  trend.go  trend_test.go
scripts/: README.md  release.sh  stress_runner.py
scripts/web-to-markdown/: README.md  USAGE_TIPS.md  ai_web_to_markdown.py  example_usage.py  install.sh  pyproject.toml  simple_web_to_markdown.py  web_to_markdown.py
stress/: stress_raw.csv  stress_summary.html
websocket/: approval.go  approval_test.go  client.go  conn.go  decode_krx.go  decode_krx_test.go  decode_phase10.go  decode_phase10_test.go  decode_phase11_2.go  decode_phase11_2_test.go  decode_phase11_3.go  decode_phase11_3_test.go  decode_phase11_7.go  decode_phase11_7_test.go  decode_phase9.go  decode_phase9_test.go  dispatcher.go  dispatcher_test.go  doc.go  errors.go  errors_test.go  events_krx.go  events_phase10.go  events_phase11_2.go  events_phase11_3.go  events_phase11_7.go  events_phase9.go  frame.go  frame_test.go  integration_test.go  reconnect.go  reconnect_test.go  route_phase11_3_test.go  route_phase11_7_test.go  subscriber.go  subscriber_test.go
(+507 files in other folders)
