[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korea-investment-stock"
version = "0.8.0"
description = "Pure Python wrapper for Korea Investment Securities OpenAPI"
authors = [
    { name = "Jonghun Yoo", email = "jonghun.yoo@pyquant.co.kr" },
    { name = "Brayden Jo", email = "brayden.jo@pyquant.co.kr" },
    { name = "Frank Oh", email = "kenshin579@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
]

[project.optional-dependencies]
redis = [
    "redis>=4.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "fakeredis>=2.10.0",
]

[project.urls]
"Github" = "https://github.com/kenshin579/korea-investment-stock"
"Bug Tracker" = "https://github.com/kenshin579/korea-investment-stock/issues"

[tool.setuptools.packages.find]
include = ["korea_investment_stock*"]
